# matrix_determinate

./: .gitignore  CMakeLists.txt  LICENSE  make_snapshot.py  perf.test  performance_test.txt  performance_test_new.txt  readme.md
include/: Matrix.hpp  MatrixAlgorithms.hpp  MatrixJagged.hpp
src/: main.cpp
tests/: CMakeLists.txt  MatrixPerformanceTest.hpp  test_matrix.cpp  test_matrixAlgorithms.cpp  test_matrixJagged.cpp  test_matrixPerformance.cpp
